# D_RAG

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  crawl4ai_server_config.yml  docker-compose.yml  lanchain-api.Dockerfile  lanchain-docker-compose.yml  langgraph.json  nginx-linker.Dockerfile  nginx.conf  pyproject.toml  renovate.json
notebooks/: test.ipynb
src/d_rag/: configuration.py  graph.py  retsinfo_crawl.py  translate_async.py
src/ollama_deep_researcher/: configuration.py  graph.py  prompts.py  retsinfo_crawl.py  state.py  test.ipynb  translate_async.py  utils.py
